--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,9 @@ wxauto==3.9.11.17.5
 pandas==2.1.1
 matplotlib==3.8.0
 pillow==10.0.1
-pyperclip==1.8.2 
+pyperclip==1.8.2
+numpy
+wordcloud
+geopandas
+mapclassify
+requests 
